fix spacing

--- a/styles/design-settings/corn/parts/_answerkey-settings.scss
+++ b/styles/design-settings/corn/parts/_answerkey-settings.scss
@@ -30,15 +30,6 @@
         ProblemSolutionDivider: (
             display: table-cell,
         ),
-        ExerciseSolutionContainer: (
-            padding-left: v-spacing(1),
-        ),
-        ExerciseSolutionContainerWithFirstElement: (
-            padding-left: v-spacing(1),
-        ),
-        ExerciseSolutionContainerWithInlineListOnTop: (
-            padding-left: v-spacing(1),
-        ),
     ),
 ));
 
