--- a/styles/output/contemporary-math-pdf.css
+++ b/styles/output/contemporary-math-pdf.css
@@ -4173,6 +4173,7 @@ section.check-understanding [data-type=injected-exercise][data-is-multipart=True
 .os-eob [data-type=solution] > .os-solution-container {
   display: table-cell;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eob [data-type=solution] > .os-solution-container > p {
@@ -4186,12 +4187,14 @@ section.check-understanding [data-type=injected-exercise][data-is-multipart=True
   vertical-align: bottom;
   padding-top: 0.7rem;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eob [data-type=solution] > .os-solution-container.has-first-inline-list-element {
   display: table-cell;
   vertical-align: bottom;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eob [data-type=question-solution] {
@@ -4216,6 +4219,7 @@ section.check-understanding [data-type=injected-exercise][data-is-multipart=True
 .os-eob [data-type=question-solution] > .os-solution-container {
   display: table-cell;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eob [data-type=question-solution] > .os-solution-container > p {
@@ -4229,12 +4233,14 @@ section.check-understanding [data-type=injected-exercise][data-is-multipart=True
   vertical-align: bottom;
   padding-top: 0.7rem;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eob [data-type=question-solution] > .os-solution-container.has-first-inline-list-element {
   display: table-cell;
   vertical-align: bottom;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-index-container {
