--- a/styles/output/statistics-pdf.css
+++ b/styles/output/statistics-pdf.css
@@ -3861,6 +3861,7 @@ p > [data-type=title] {
 .os-eoc [data-type=solution] > .os-solution-container {
   display: table-cell;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eoc [data-type=solution] > .os-solution-container > p {
@@ -3874,12 +3875,14 @@ p > [data-type=title] {
   vertical-align: bottom;
   padding-top: 0.7rem;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eoc [data-type=solution] > .os-solution-container.has-first-inline-list-element {
   display: table-cell;
   vertical-align: bottom;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eoc [data-type=question-solution] {
@@ -3904,6 +3907,7 @@ p > [data-type=title] {
 .os-eoc [data-type=question-solution] > .os-solution-container {
   display: table-cell;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eoc [data-type=question-solution] > .os-solution-container > p {
@@ -3917,12 +3921,14 @@ p > [data-type=title] {
   vertical-align: bottom;
   padding-top: 0.7rem;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-eoc [data-type=question-solution] > .os-solution-container.has-first-inline-list-element {
   display: table-cell;
   vertical-align: bottom;
   width: 100%;
+  padding-left: 0.7rem;
 }
 
 .os-glossary-container > dl {
